Fix flickering

--- a/src/themes/theme_shadow.scss
+++ b/src/themes/theme_shadow.scss
@@ -6,13 +6,9 @@
     .node {
         $color-highlight-shadow: darken(desaturate($color-highlight, 40), 10);
         
-        border: none;
+        border: 1px solid transparent;
         box-shadow: 0 2px 2px 0 rgba($color-highlight-shadow,.14),
                     0 3px 1px -2px rgba($color-highlight-shadow,.2),
                     0 1px 5px 0 rgba($color-highlight-shadow,.12);
-        
-        &.active {
-            border: none;
-        }
     }
 }
